// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignInScreen snapshot matches snapshot in default (idle) state 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "justifyContent": "center",
          "padding": 16,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#F9FAFB",
              "borderColor": "#F3F4F6",
              "borderRadius": 12,
              "borderWidth": 1,
              "elevation": 10,
              "maxWidth": 448,
              "padding": 33,
              "shadowColor": "#000000",
              "shadowOffset": {
                "height": 20,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 25,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 144,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "rgba(13, 242, 242, 0.10)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "marginBottom": 16,
                  "width": 64,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "marginBottom": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#1F2937",
                    "fontSize": 24,
                    "fontWeight": "700",
                    "textAlign": "center",
                  }
                }
              >
                Welcome Back
              </Text>
              <Text
                style={
                  {
                    "color": "#6B7280",
                    "fontSize": 16,
                    "marginTop": 4,
                    "textAlign": "center",
                  }
                }
              >
                Please enter your details
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "gap": 16,
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#F3F4F6",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "marginBottom": 24,
                  "padding": 4,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#F9FAFB",
                    "borderRadius": 12,
                    "elevation": 1,
                    "flex": 1,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingVertical": 8,
                    "shadowColor": "#000000",
                    "shadowOffset": {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.05,
                    "shadowRadius": 2,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 14,
                        "fontWeight": "500",
                      },
                      {
                        "color": "#1F2937",
                      },
                    ]
                  }
                >
                  Login
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 12,
                    "flex": 1,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingVertical": 8,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 14,
                        "fontWeight": "500",
                      },
                      {
                        "color": "#6B7280",
                      },
                    ]
                  }
                >
                  Sign Up
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "gap": 4,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Username
              </Text>
              <View
                style={
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "#D1D5DB",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "height": 44,
                    "paddingHorizontal": 13,
                    "paddingVertical": 11,
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  onChangeText={[Function]}
                  placeholder="Enter your username"
                  style={
                    {
                      "color": "#6B7280",
                      "flex": 1,
                      "fontSize": 16,
                      "paddingVertical": 0,
                    }
                  }
                  value=""
                />
              </View>
            </View>
            <View
              style={
                {
                  "gap": 4,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Password
              </Text>
              <View
                style={
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "#D1D5DB",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "height": 44,
                    "paddingHorizontal": 13,
                    "paddingVertical": 11,
                  }
                }
              >
                <TextInput
                  onChangeText={[Function]}
                  placeholder="••••••••"
                  secureTextEntry={true}
                  style={
                    {
                      "color": "#6B7280",
                      "flex": 1,
                      "fontSize": 16,
                      "paddingVertical": 0,
                    }
                  }
                  value=""
                />
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#0DF2F2",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "marginTop": 8,
                    "textAlign": "right",
                  }
                }
              >
                Forgot Password?
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 16,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#F9FAFB",
                    "borderColor": "#D1D5DB",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "height": 16,
                    "opacity": 1,
                    "width": 16,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#4B5563",
                    "fontSize": 14,
                    "marginLeft": 8,
                  }
                }
              >
                Use biometrics for faster login
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#0DF2F2",
                  "borderRadius": 12,
                  "elevation": 5,
                  "justifyContent": "center",
                  "marginBottom": 16,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                  "paddingVertical": 12,
                  "shadowColor": "#000000",
                  "shadowOffset": {
                    "height": 10,
                    "width": 0,
                  },
                  "shadowOpacity": 0.1,
                  "shadowRadius": 15,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#111827",
                    "fontSize": 16,
                    "fontWeight": "700",
                  }
                }
              >
                Sign In
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "rgba(13, 242, 242, 0.30)",
                  "borderRadius": 12,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 24,
                  "opacity": 1,
                  "paddingHorizontal": 18,
                  "paddingVertical": 14,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "marginRight": 8,
                    "width": 18,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#0DF2F2",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Sign in with Biometrics
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#E5E7EB",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontSize": 14,
                  "marginHorizontal": 8,
                }
              }
            >
              Or continue with
            </Text>
            <View
              style={
                {
                  "backgroundColor": "#E5E7EB",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
                "marginBottom": 24,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "#E5E7EB",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 11,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Google
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "#E5E7EB",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 11,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Facebook
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#9CA3AF",
                  "fontSize": 12,
                  "textAlign": "center",
                }
              }
            >
              By continuing, you agree to our
               
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Terms of Service
              </Text>
              

              and
               
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Privacy Policy
              </Text>
              .
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`SignInScreen snapshot matches snapshot in loading state 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "flex": 1,
          "justifyContent": "center",
          "padding": 16,
        }
      }
      keyboardShouldPersistTaps="handled"
    >
      <View>
        <View
          style={
            {
              "backgroundColor": "#F9FAFB",
              "borderColor": "#F3F4F6",
              "borderRadius": 12,
              "borderWidth": 1,
              "elevation": 10,
              "maxWidth": 448,
              "padding": 33,
              "shadowColor": "#000000",
              "shadowOffset": {
                "height": 20,
                "width": 0,
              },
              "shadowOpacity": 0.1,
              "shadowRadius": 25,
              "width": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "height": 144,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "rgba(13, 242, 242, 0.10)",
                  "borderRadius": 32,
                  "height": 64,
                  "justifyContent": "center",
                  "marginBottom": 16,
                  "width": 64,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 32,
                    "width": 32,
                  }
                }
              />
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "marginBottom": 8,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#1F2937",
                    "fontSize": 24,
                    "fontWeight": "700",
                    "textAlign": "center",
                  }
                }
              >
                Welcome Back
              </Text>
              <Text
                style={
                  {
                    "color": "#6B7280",
                    "fontSize": 16,
                    "marginTop": 4,
                    "textAlign": "center",
                  }
                }
              >
                Please enter your details
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "gap": 16,
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#F3F4F6",
                  "borderRadius": 12,
                  "flexDirection": "row",
                  "marginBottom": 24,
                  "padding": 4,
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "#F9FAFB",
                    "borderRadius": 12,
                    "elevation": 1,
                    "flex": 1,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingVertical": 8,
                    "shadowColor": "#000000",
                    "shadowOffset": {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 0.05,
                    "shadowRadius": 2,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 14,
                        "fontWeight": "500",
                      },
                      {
                        "color": "#1F2937",
                      },
                    ]
                  }
                >
                  Login
                </Text>
              </View>
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 12,
                    "flex": 1,
                    "justifyContent": "center",
                    "opacity": 1,
                    "paddingVertical": 8,
                  }
                }
              >
                <Text
                  style={
                    [
                      {
                        "fontSize": 14,
                        "fontWeight": "500",
                      },
                      {
                        "color": "#6B7280",
                      },
                    ]
                  }
                >
                  Sign Up
                </Text>
              </View>
            </View>
            <View
              style={
                {
                  "gap": 4,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Username
              </Text>
              <View
                style={
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "#D1D5DB",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "height": 44,
                    "paddingHorizontal": 13,
                    "paddingVertical": 11,
                  }
                }
              >
                <TextInput
                  autoCapitalize="none"
                  onChangeText={[Function]}
                  placeholder="Enter your username"
                  style={
                    {
                      "color": "#6B7280",
                      "flex": 1,
                      "fontSize": 16,
                      "paddingVertical": 0,
                    }
                  }
                  value=""
                />
              </View>
            </View>
            <View
              style={
                {
                  "gap": 4,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Password
              </Text>
              <View
                style={
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "#D1D5DB",
                    "borderRadius": 12,
                    "borderWidth": 1,
                    "height": 44,
                    "paddingHorizontal": 13,
                    "paddingVertical": 11,
                  }
                }
              >
                <TextInput
                  onChangeText={[Function]}
                  placeholder="••••••••"
                  secureTextEntry={true}
                  style={
                    {
                      "color": "#6B7280",
                      "flex": 1,
                      "fontSize": 16,
                      "paddingVertical": 0,
                    }
                  }
                  value=""
                />
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "opacity": 1,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#0DF2F2",
                    "fontSize": 14,
                    "fontWeight": "500",
                    "marginTop": 8,
                    "textAlign": "right",
                  }
                }
              >
                Forgot Password?
              </Text>
            </View>
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "marginBottom": 16,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  {
                    "backgroundColor": "#F9FAFB",
                    "borderColor": "#D1D5DB",
                    "borderRadius": 4,
                    "borderWidth": 1,
                    "height": 16,
                    "opacity": 1,
                    "width": 16,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#4B5563",
                    "fontSize": 14,
                    "marginLeft": 8,
                  }
                }
              >
                Use biometrics for faster login
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#0DF2F2",
                  "borderRadius": 12,
                  "elevation": 5,
                  "justifyContent": "center",
                  "marginBottom": 16,
                  "opacity": 1,
                  "paddingHorizontal": 16,
                  "paddingVertical": 12,
                  "shadowColor": "#000000",
                  "shadowOffset": {
                    "height": 10,
                    "width": 0,
                  },
                  "shadowOpacity": 0.1,
                  "shadowRadius": 15,
                }
              }
            >
              <ActivityIndicator
                color="#000"
                size="small"
                testID="signin-loading"
              />
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "rgba(13, 242, 242, 0.30)",
                  "borderRadius": 12,
                  "borderWidth": 2,
                  "flexDirection": "row",
                  "justifyContent": "center",
                  "marginBottom": 24,
                  "opacity": 1,
                  "paddingHorizontal": 18,
                  "paddingVertical": 14,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "marginRight": 8,
                    "width": 18,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#0DF2F2",
                    "fontSize": 16,
                    "fontWeight": "600",
                  }
                }
              >
                Sign in with Biometrics
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "marginBottom": 24,
              }
            }
          >
            <View
              style={
                {
                  "backgroundColor": "#E5E7EB",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
            <Text
              style={
                {
                  "color": "#6B7280",
                  "fontSize": 14,
                  "marginHorizontal": 8,
                }
              }
            >
              Or continue with
            </Text>
            <View
              style={
                {
                  "backgroundColor": "#E5E7EB",
                  "flex": 1,
                  "height": 1,
                }
              }
            />
          </View>
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 16,
                "marginBottom": 24,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "#E5E7EB",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 11,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Google
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "borderColor": "#E5E7EB",
                  "borderRadius": 12,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row",
                  "gap": 8,
                  "justifyContent": "center",
                  "opacity": 1,
                  "paddingVertical": 11,
                }
              }
            >
              <Image
                resizeMode="contain"
                source={0}
                style={
                  {
                    "height": 20,
                    "width": 20,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 14,
                    "fontWeight": "500",
                  }
                }
              >
                Facebook
              </Text>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
              }
            }
          >
            <Text
              style={
                {
                  "color": "#9CA3AF",
                  "fontSize": 12,
                  "textAlign": "center",
                }
              }
            >
              By continuing, you agree to our
               
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Terms of Service
              </Text>
              

              and
               
              <Text
                style={
                  {
                    "color": "#374151",
                    "fontSize": 12,
                    "fontWeight": "500",
                    "textDecorationLine": "underline",
                  }
                }
              >
                Privacy Policy
              </Text>
              .
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;
